Animation via jQuery

--- a/projectes/projectes.html
+++ b/projectes/projectes.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     
+    <p style="position: absolute; top: 0px; color: white; right: 20px;">beta</p>
+
     <div class="container">
         <div class="circle rotate-r" id="main"></div>
     </div>
